@@ -2,12 +2,13 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>TauCode.WebApi</id>
-    <version>2.19.1-dev-0107-0105</version>
+    <version>2.19.2-dev-0704-1143</version>
     <authors>TauCode</authors>
     <owners>TauCode</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>TauCode Web API basic support</description>
     <releaseNotes>
+      Added DTO-s for CRUD.
     </releaseNotes>
     <tags>taucode web api</tags>
     <dependencies>
