@@ -1,0 +1,7 @@
+﻿namespace TauCode.WebApi
+{
+    public class DeleteResultDto
+    {
+        public string InstanceId { get; set; }
+    }
+}
